fix(QRScan): prevent qr scan button from collapsing in firefox

--- a/assets/css/components/_qr-scan.scss
+++ b/assets/css/components/_qr-scan.scss
@@ -1,5 +1,6 @@
 
 .qr-scan-button {
+  width: auto !important;
   img,
   .ladda-button,
   .ladda-button .ladda-spinner {
